<resources>
    <string name="app_name">QuizApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="register_text">Hesabınız yoxdurmu? Qeydiyyat</string>
    <string name="login_text">Hesabınız varmı? Giriş</string>
    <string name="login_welcome_back">Welcome Back</string>
    <string name="login_subtitle">Login to continue your quiz journey.</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forgot_password">Forgot Password?</string>
    <string name="login_login">Login</string>
    <string name="login_or_continue_with">Or continue with</string>
    <string name="login_sign_in_with_google">Sign in with Google</string>
    <string name="login_register_prompt">Don\'t have an account? Register</string>
    <string name="informatika">Informatika</string>
    <string name="dialog_avatar_choose_avatar">Choose Avatar</string>
    <string name="dialog_challenge_accepted_challenge_accepted">Challenge Accepted</string>
    <string name="dialog_challenge_accepted_alex">Alex</string>
    <string name="dialog_challenge_accepted_id_ael_1001">ID: AEL-1001</string>
    <string name="dialog_challenge_accepted_mode">Mode</string>
    <string name="dialog_challenge_accepted_1v1_duel">1v1 Duel</string>
    <string name="dialog_challenge_accepted_category">Category</string>
    <string name="dialog_challenge_accepted_random">Random</string>
    <string name="dialog_challenge_accepted_accepted_your_challenge_and_is_waiting_in_the_room_njoin_now_to_start_the_duel">accepted your challenge and is waiting in the room.\nJoin now to start the duel.</string>
    <string name="dialog_challenge_accepted_cancel">Cancel</string>
    <string name="dialog_challenge_accepted_join_room">Join Room</string>
    <string name="dialog_challenge_info_challenge_ended">Challenge Ended</string>
    <string name="dialog_challenge_info_opponent_cancelled_the_challenge">Opponent cancelled the challenge.</string>
    <string name="dialog_challenge_info_ok">OK</string>
    <string name="challenge_room_challenge_room">Challenge Room</string>
    <string name="challenge_room_prepare_for_your_1v1_battle">Prepare for your 1v1 battle</string>
    <string name="challenge_room_joseph_cancelled_the_challenge">Joseph cancelled the challenge.</string>
    <string name="challenge_room_close_alert">Close alert</string>
    <string name="challenge_room_waiting_for_player">Waiting for player</string>
    <string name="challenge_room_emma_johnson">Emma Johnson</string>
    <string name="challenge_room_id_ael_29481">ID: AEL-29481</string>
    <string name="challenge_room_mode">Mode</string>
    <string name="challenge_room_1v1_duel">1v1 Duel</string>
    <string name="challenge_room_category">Category</string>
    <string name="challenge_room_informatics">Informatics</string>
    <string name="challenge_room_match_starts_soon">Match starts soon</string>
    <string name="challenge_room_waiting_for_both_players_to_be_ready">Waiting for both players to be ready</string>
    <string name="challenge_room_00_20">00:20</string>
    <string name="challenge_room_room_status">Room Status</string>
    <string name="challenge_room_you">You</string>
    <string name="challenge_room_ready">Ready</string>
    <string name="challenge_room_opponent">Opponent</string>
    <string name="challenge_room_waiting">Waiting</string>
    <string name="challenge_room_start_match">Start Match</string>
    <string name="challenge_room_cancel">Cancel</string>
    <string name="create_test_create_quiz">Create Quiz</string>
    <string name="create_test_build_a_clean_and_custom_quiz_setup">Build a clean and custom quiz setup</string>
    <string name="create_test_category">Category</string>
    <string name="create_test_select_category">Select Category</string>
    <string name="create_test_expand_category">Expand category</string>
    <string name="create_test_informatics">Informatics</string>
    <string name="create_test_mathematics">Mathematics</string>
    <string name="create_test_english">English</string>
    <string name="create_test_history">History</string>
    <string name="create_test_world_knowledge">World Knowledge</string>
    <string name="create_test_logic">Logic</string>
    <string name="create_test_difficulty">Difficulty</string>
    <string name="create_test_select_difficulty">Select Difficulty</string>
    <string name="create_test_expand_difficulty">Expand difficulty</string>
    <string name="create_test_easy">Easy</string>
    <string name="create_test_medium">Medium</string>
    <string name="create_test_hard">Hard</string>
    <string name="create_test_topic">Topic</string>
    <string name="create_test_hint_topic">Topic</string>
    <string name="create_test_expand_topic">Expand topic</string>
    <string name="create_test_question_count">Question Count</string>
    <string name="create_test_select_question_count">Select Question Count</string>
    <string name="create_test_expand_question_count">Expand question count</string>
    <string name="create_test__10">10</string>
    <string name="create_test__20">20</string>
    <string name="create_test__30">30</string>
    <string name="create_test_title">Title</string>
    <string name="create_test_quiz_title">Quiz Title</string>
    <string name="create_test_save_quiz">Save Quiz</string>
    <string name="edit_profile_back">Back</string>
    <string name="edit_profile_edit_profile">Edit Profile</string>
    <string name="edit_profile_save">Save</string>
    <string name="edit_profile_profile_information">Profile Information</string>
    <string name="edit_profile_update_your_visible_profile_details_and_security_settings">Update your visible profile details and security settings</string>
    <string name="edit_profile_avatar">Avatar</string>
    <string name="edit_profile_edit_avatar">Edit avatar</string>
    <string name="edit_profile_basic_information">Basic Information</string>
    <string name="edit_profile_this_name_is_shown_on_your_profile_and_home_screen">This name is shown on your profile and home screen</string>
    <string name="edit_profile_name">Name</string>
    <string name="edit_profile_password">Password</string>
    <string name="edit_profile__12345678">12345678</string>
    <string name="edit_profile_change_password">Change Password</string>
    <string name="edit_profile_old_password">Old Password</string>
    <string name="edit_profile_new_password">New Password</string>
    <string name="edit_profile_repeat_new_password">Repeat New Password</string>
    <string name="edit_profile_save_changes">Save Changes</string>
    <string name="edit_profile_account_amp_security">Account &amp; Security</string>
    <string name="edit_profile_your_email_and_id_are_read_only_you_can_update_your_password_when_needed">Your email and ID are read-only. You can update your password when needed.</string>
    <string name="edit_profile_gmail">Gmail</string>
    <string name="edit_profile_user_id">User ID</string>
    <string name="favorites_favorites">Favorites</string>
    <string name="favorites_your_saved_questions_will_appear_here">Your saved questions will appear here.</string>
    <string name="favorites_no_favorite_questions_yet">No favorite questions yet</string>
    <string name="when_you_save_qufavorites_estions_during_a_quiz_they_will_appear_here_for_quick_review">When you save questions during a quiz, they will appear here for quick review.</string>
    <string name="home_hello">Hello</string>
    <string name="home_search_player">Search player</string>
    <string name="home__0">0</string>
    <string name="home_create_test">Create Test</string>
    <string name="home_single_player">Single Player</string>
    <string name="home_multiplayer">Multiplayer</string>
    <string name="home_test_categories">Test Categories</string>
    <string name="home_view_all">View All</string>
    <string name="home_informatics">Informatics</string>
    <string name="home_mathematics">Mathematics</string>
    <string name="home_english">English</string>
    <string name="home_history">History</string>
    <string name="home_world_view">World View</string>
    <string name="home_logic">Logic</string>
    <string name="home_test_your_luck_and_earn_nmore_points">Test your luck and earn\nmore points!</string>
    <string name="home_start_now">Start Now</string>
    <string name="home_back">Back</string>
    <string name="home_find_players">Find Players</string>
    <string name="home_enter_player_name_or_id">Enter player name or ID</string>
    <string name="home_search">Search</string>
    <string name="home_no_player_found">No player found</string>
    <string name="leaderboard_weekly">Weekly</string>
    <string name="leaderboard_monthly">Monthly</string>
    <string name="leaderboard_overall">Overall</string>
    <string name="leaderboard__3">3</string>
    <string name="leaderboard_title">Title</string>
    <string name="leaderboard__00000">00000</string>
    <string name="leaderboard__1">1</string>
    <string name="leaderboard__2">2</string>
    <string name="multiplayer_friend_play_with_friends">Play with Friends</string>
    <string name="multiplayer_friend_teams_are_ready">Teams are ready</string>
    <string name="multiplayer_friend_double_tap_a_slot_to_join_a_team">Double tap a + slot to join a team</string>
    <string name="multiplayer_friend_mathematics">Mathematics</string>
    <string name="multiplayer_friend__4v4">4v4</string>
    <string name="multiplayer_friend_room_id">Room ID</string>
    <string name="multiplayer_friend_ael_hl7z">AEL-HL7Z</string>
    <string name="multiplayer_friend_copy">Copy</string>
    <string name="multiplayer_friend_share_this_room_id_with_your_friends_to_join_the_match">Share this room ID with your friends to join the match</string>
    <string name="multiplayer_friend_team_a">Team A</string>
    <string name="multiplayer_friend_joined">Joined</string>
    <string name="multiplayer_friend__1_4">1/4</string>
    <string name="multiplayer_friend_player_count_1_4">Player Count: 1/4</string>
    <string name="multiplayer_friend_joseph_emma">Joseph, Emma</string>
    <string name="multiplayer_friend_tap_to_join">Tap + to join</string>
    <string name="multiplayer_friend_you_joined">You joined</string>
    <string name="multiplayer_friend_vs">VS</string>
    <string name="multiplayer_friend_team_b">Team B</string>
    <string name="multiplayer_friend_open">Open</string>
    <string name="multiplayer_friend__0_4">0/4</string>
    <string name="multiplayer_friend_player_count_0_4">Player Count: 0/4</string>
    <string name="multiplayer_friend_waiting_for_players">Waiting for players...</string>
    <string name="multiplayer_friend_start_the_match_when_both_teams_are_ready">Start the match when both teams are ready</string>
    <string name="multiplayer_friend_room_chat">Room Chat</string>
    <string name="multiplayer_friend_join_team_a">Join Team A</string>
    <string name="item_friend_player_name">Player Name</string>
    <string name="item_friend_id_ael_29481">ID: AEL-29481</string>
    <string name="item_friend_score_icon">Score icon</string>
    <string name="item_friend__1250">1250</string>
    <string name="item_leaderboard_player__1">1</string>
    <string name="item_leaderboard_player_player_name">Player Name</string>
    <string name="item_leaderboard_player_score_icon">Score icon</string>
    <string name="item_leaderboard_player__00000000">00000000</string>
    <string name="item_leaderboard_player_more_options">More options</string>
    <string name="item_team_player_player_name">Player Name</string>
    <string name="item_team_player_id_ael_29481">ID: AEL-29481</string>
    <string name="item_team_player_score_icon">Score icon</string>
    <string name="item_team_player__1250">1250</string>
    <string name="item_team_player_kick_player">Kick player</string>
</resources>